[workspace]
members = ["obcrypt", "obcrypt-py", "obcrypt-wasm", "obcrypt-ffi"]
resolver = "2"

# Release / bench profiles at the workspace level so they actually
# apply (Cargo silently ignores per-package profiles on non-root
# members). LTO is important for the `oboron` consumer that depends
# on this crate via path-dep — without it, cross-crate inlining of
# the AEAD hot path doesn't happen.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.77.0"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/oboron/obcrypt-rs"
homepage = "https://oboron.org/"
documentation = "https://docs.rs/obcrypt"
authors = ["Bojan Đuričković"]

[workspace.dependencies]
# Sibling crates (path deps for in-workspace builds; consumers outside
# the workspace use the crates.io version).
obcrypt = { path = "obcrypt", version = "1.0.0", default-features = false }

# Shared third-party deps
rand = "0.8"
thiserror = "1.0"
zeroize = { version = "1", features = ["derive"] }

# `hex` is the canonical text encoding for obcrypt keys.
hex = "0.4"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }

# wasm-bindgen for the obcrypt-wasm npm bindings.
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
