[package]
name = "obcrypt-ffi"
# Versioned independently of the obcrypt core: the C ABI has its own
# surface (the generated header). Starts at 0.1.0 — the initial
# release; it reaches 1.0 after real-world use. The coarse
# ABI-generation guard (OBCRYPT_ABI_VERSION) is separate from this and
# stays 1 across version bumps until the ABI changes incompatibly.
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["Bojan Đuričković"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/oboron/obcrypt-rs"
description = "C ABI for obcrypt — a thin extern \"C\" surface over the bytes-in/bytes-out crypto core so non-Rust languages can call it through FFI."
homepage = "https://oboron.org/"
documentation = "https://oboron.org/"
# Ships as a built shared/static library plus a C header, not as a
# crates.io dependency — a cdylib isn't consumable from Cargo.
publish = false

[lib]
name = "obcrypt_ffi"
# cdylib → libobcrypt_ffi.{so,dylib,dll} for runtime FFI;
# staticlib → libobcrypt_ffi.a for static embedding;
# rlib → lets the in-repo integration test (tests/conformance.rs) link
# the exported `extern "C"` functions directly. The rlib is build-only
# tooling; it is not a distributed artifact.
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Mirror obcrypt's scheme gating so a consumer can trim the ABI to
# the schemes it needs. Default is the four production schemes.
default = ["dgcmsiv", "pgcmsiv", "dsiv", "psiv"]
dgcmsiv = ["obcrypt/dgcmsiv"]
pgcmsiv = ["obcrypt/pgcmsiv"]
dsiv = ["obcrypt/dsiv"]
psiv = ["obcrypt/psiv"]

[dependencies]
obcrypt = { workspace = true, default-features = false }

[dev-dependencies]
# Conformance harness (tests/conformance.rs): parse the canonical
# oboron JSONL test vectors and hex-decode their `.hex` obtext.
serde_json = "1"
hex.workspace = true
