[package]
name = "obcrypt-py"
# Decoupled from the workspace version: the Python package on PyPI
# follows its own release cadence, independent of the obcrypt Rust
# crate on crates.io.
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Python bindings for obcrypt — bytes-in/bytes-out symmetric encryption (oboron protocol, a-tier + u-tier)."
keywords = ["python", "encryption", "cryptography", "oboron"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"
# Not a crates.io publication target — this crate ships to PyPI via
# maturin (see pyproject.toml), not to crates.io.
publish = false

[lib]
name = "_obcrypt"
crate-type = ["cdylib"]

[features]
# obcrypt is all-secure (a-tier authenticated, u-tier unauthenticated
# but still real cryptography); there is no unsecure subset, so no
# `secure-schemes` aggregate is needed at this layer. Default enables
# the five production schemes directly.
default = ["aags", "apgs", "aasv", "apsv", "upbc"]

# Individual schemes — each forwards to obcrypt AND enables the local
# feature flag that gates the binding code in `src/lib.rs`. Without the
# local flag the binding for that scheme is silently omitted from the
# module.
aags = ["obcrypt/aags"]
apgs = ["obcrypt/apgs"]
aasv = ["obcrypt/aasv"]
apsv = ["obcrypt/apsv"]
upbc = ["obcrypt/upbc"]
mock = ["obcrypt/mock"]

[dependencies]
obcrypt = { workspace = true, default-features = false }
pyo3.workspace = true
