[package]
name = "obcrypt-py"
# Decoupled from the workspace version: the Python package on PyPI
# follows its own release cadence, independent of the obcrypt Rust
# crate on crates.io. 1.0.0 aligns the first stable Python release
# with the obcrypt 1.0 core.
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Python bindings for obcrypt — bytes-in/bytes-out authenticated encryption (oboron protocol core schemes)."
keywords = ["python", "encryption", "cryptography", "oboron"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"
# Not a crates.io publication target — this crate ships to PyPI via
# maturin (see pyproject.toml), not to crates.io.
publish = false

[lib]
name = "_obcrypt"
crate-type = ["cdylib"]

[features]
# obcrypt's core schemes are all authenticated, so there is no unsecure
# subset and no `secure-schemes` aggregate is needed at this layer.
# Default enables the four production schemes directly.
default = ["dgcmsiv", "pgcmsiv", "dsiv", "psiv"]

# Individual schemes — each forwards to obcrypt AND enables the local
# feature flag that gates the binding code in `src/lib.rs`. Without the
# local flag the binding for that scheme is silently omitted from the
# module.
dgcmsiv = ["obcrypt/dgcmsiv"]
pgcmsiv = ["obcrypt/pgcmsiv"]
dsiv = ["obcrypt/dsiv"]
psiv = ["obcrypt/psiv"]
mock = ["obcrypt/mock"]

[dependencies]
obcrypt = { workspace = true, default-features = false }
pyo3.workspace = true
