[package]
name = "obcrypt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Bytes-in/bytes-out cryptographic core of the oboron protocol (authenticated core schemes, no encoding)."
keywords = ["encryption", "cryptography", "oboron", "aes", "siv"]
categories = ["cryptography"]
readme = "README.md"

[features]
# obcrypt provides the authenticated core schemes (the unauthenticated
# and obfuscation schemes live in the separate obu layer). Default
# enables all four production schemes directly.
default = ["dgcmsiv", "pgcmsiv", "dsiv", "psiv"]

# Individual schemes
dgcmsiv = ["aes-gcm-siv", "hkdf", "sha2"]
pgcmsiv = ["aes-gcm-siv", "hkdf", "sha2"]
dsiv = ["aes-siv"]
psiv = ["aes-siv"]

# Testing-only schemes (no encryption)
mock = []

[dependencies]
zeroize = { version = "1", features = ["derive"] }
thiserror = "1.0"
aead = { version = "0.5", default-features = false, features = ["alloc"] }
hex.workspace = true

# Conditionally included based on features
aes-gcm-siv = { version = "0.11", optional = true }
aes-siv = { version = "0.7", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
name = "obcrypt"
path = "src/lib.rs"
crate-type = ["rlib"]
